kcms/libkwindevices: put template functions in the header

Otherwise some compilers will get confused and fail with nonsensical linking errors.

Discovered while building 6.3.1 on NixOS, and should probably be backported.

BUG: 500345